# google-calendar-cleanup

./: .gitignore  LICENSE  README.md  pyproject.toml
google_calendar_cleanup/: cli.py  delete_event_google_api.py
