[project]
name = "google-calendar-cleanup"
version = "0.1.0"
description = "Script to delete specific events from Google Calendar"
authors = [
    {name = "Maximilien Naveau",email = "maximilien.naveau@gmail.com"}
]
license = {text = "BSD3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client (>=2.172.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cleanup = "google_calendar_cleanup.cli:main"
